--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,23 +10,22 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Setup MSBuild
-        uses: microsoft/setup-msbuild@v1.1
+      - name: Setup msvc
+        uses: ilammy/msvc-dev-cmd@v1
+      - name: Configure cmake
+        run: cmake -G "Ninja" -DCMAKE_BUILD_TYPE:STRING="${{ env.BUILD_PROFILE }}"
       - name: Build
-        run: msbuild /p:Configuration=${{ env.BUILD_PROFILE }}
+        run: cmake --build .
       - name: Extract Short Commit Hash
         id: extract
         shell: bash
-        run: echo ::set-output name=commit::`git rev-parse --short HEAD`
+        run: echo commit=$(git rev-parse --short HEAD) >> $GITHUB_OUTPUT
       - name: Upload Build Artifact
         uses: actions/upload-artifact@v3
         with:
           name: RoninLauncher-${{ steps.extract.outputs.commit }}
           path: |
-            x64/${{ env.BUILD_PROFILE }}/*.dll
-            x64/${{ env.BUILD_PROFILE }}/*.exe
-            x64/${{ env.BUILD_PROFILE }}/*.pdb
-            x64/${{ env.BUILD_PROFILE }}/*.txt
+            game/
 
   format-check:
     runs-on: ubuntu-latest
@@ -35,7 +34,7 @@ jobs:
     - uses: DoozyX/clang-format-lint-action@v0.13
       with:
         source: 'RoninDLL RoninLauncher'
-        exclude: 'RoninDLL/include loader_launcher_proxy loader_wsock32_proxy'
+        exclude: 'RoninDLL/include loader_launcher_proxy'
         extensions: 'h,cpp'
         clangFormatVersion: 13
         style: file
